# rust-ray-tracer

./: .gitignore  Cargo.toml  Readme.md
src/: camera.rs  hittable.rs  interval.rs  light.rs  main.rs  material.rs  primitive.rs  ray.rs  ray_hit.rs  renderer.rs  resolution.rs  scene.rs  timer.rs
src/light/: point_light.rs  radial_light.rs
src/material/: dielectric.rs  diffuse.rs  emissive.rs  metal.rs
src/primitive/: plane.rs  sphere.rs
src/renderer/: gl_layer.rs
src/renderer/gl_layer/: shaders.rs  textures.rs  vertex_array.rs
