[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra-glm = "0.18.0"
image = "0.24.7"
rayon = { version = "1.8.0", optional = true }

[features]
default = [ "parallel" ]
single_threaded = []
parallel = [ "dep:rayon" ]
